--- a/.doc_gen/metadata/rekognition_metadata.yaml
+++ b/.doc_gen/metadata/rekognition_metadata.yaml
@@ -1,4 +1,23 @@
 # zexi 0.4.0
+rekognition_Hello:
+  title: Hello &REK;
+  title_abbrev: Hello &REK;
+  synopsis: get started using &REK;.
+  category: Hello
+  languages:
+    C++:
+      versions:
+        - sdk_version: 1
+          github: cpp/example_code/rekognition/hello_rekognition
+          excerpts:
+            - description: Code for the CMakeLists.txt CMake file.
+              snippet_tags:
+                - cpp.example_code.rekognition.hello_rekognition.cmake
+            - description: Code for the hello_rekognition.cpp source file.
+              snippet_tags:
+                - cpp.example_code.rekognition.hello_rekognition
+  services:
+    rekognition: {ListCollections}
 rekognition_DescribeCollection:
   guide_topic:
     title: Describing a collection
@@ -555,6 +574,14 @@ rekognition_DetectLabels:
               snippet_tags:
                 - python.example_code.rekognition.RekognitionImage
                 - python.example_code.rekognition.DetectLabels
+    C++:
+      versions:
+        - sdk_version: 1
+          github: cpp/example_code/rekognition
+          excerpts:
+            - description:
+              snippet_tags:
+                - cpp.example_code.rekognition.DetectLabels
   services:
     rekognition: {DetectLabels}
 rekognition_DetectModerationLabels:
