--- a/.github/workflows/stats_lambda.yml
+++ b/.github/workflows/stats_lambda.yml
@@ -10,5 +10,6 @@ jobs:
           with:
              AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
              AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+             REGION: 'eu-west-1'
              FunctionName: runTheNumbers
              Payload: '{ "myParameter": false }'
