--- a/.github/workflows/stats_lambda.yml
+++ b/.github/workflows/stats_lambda.yml
@@ -5,8 +5,8 @@ jobs:
   build:
       runs-on: ubuntu-latest
       steps:
-        - name: Create JSON Payload
-          run: echo "JSON_PAYLOAD={\"commit\":\"${{ github.event.pull_request.base.sha }}\"}" >> $GITHUB_ENV
+        - uses: actions/checkout@v2
+        - run: echo "JSON_PAYLOAD={\"commit\":\"${{ github.event.pull_request.base.sha }}\"}" >> $GITHUB_ENV
         - name: Invoke runTheNumbers
           uses: gagoar/invoke-aws-lambda@master
           with:
