--- a/.github/workflows/stats_lambda.yml
+++ b/.github/workflows/stats_lambda.yml
@@ -1,15 +1,15 @@
 name: Invoke runTheNumbers lambda function
 on:
+   pull_request:
    workflow_dispatch:
 env: 
    COMMIT:  ${{github.event.pull_request.base.sha}}
-
 jobs:
   build:
       runs-on: ubuntu-latest
       steps:
         - uses: actions/checkout@v2
-        - run: echo "JSON_PAYLOAD={\"commit\":\"${{ env.COMMIT }}\"}" >> $GITHUB_ENV
+        - run: echo "JSON_PAYLOAD={\"commit\":\"${{ env.COMMIT }}\"}" 
         - name: Invoke runTheNumbers
           uses: gagoar/invoke-aws-lambda@master
           with:
