--- a/.github/workflows/stats_lambda.yml
+++ b/.github/workflows/stats_lambda.yml
@@ -12,7 +12,7 @@ jobs:
       runs-on: ubuntu-latest
       steps:
         - uses: actions/checkout@v2
-        - run: echo "JSON_PAYLOAD={\"commit\":\"${{ env.COMMIT }}\"}" 
+        - run: echo "JSON_PAYLOAD={\"commit\":\"${{ env.COMMIT }}\"}" >> $GITHUB_ENV
         - name: Invoke runTheNumbers
           uses: gagoar/invoke-aws-lambda@master
           with:
