--- a/.doc_gen/metadata/ecr_metadata.yaml
+++ b/.doc_gen/metadata/ecr_metadata.yaml
@@ -15,7 +15,7 @@ ecr_Hello:
               snippet_tags:
                 - ecr.java2_hello.main
   services:
-    ecr: {listImagesPaginator}
+    ecr: {listImages}
 ecr_PushImageCmd:
   languages:
     Java:
@@ -160,13 +160,14 @@ ecr_Scenario_RepositoryManagement:
   title_abbrev: Learn &ECR; core operations
   synopsis_list:
     - Create an &ECR; repository.
-    - List &ECR; repositories for your account and get details about them.
-    - Delete &ECR; repositories.
-    - Verify the existence of an image in an &ECR; repository.
-    - Set lifecycle policies for &ECR; repositories.
+    - Set repository policies.
     - Retrieve repository URIs.
     - Get &ECR; authorization tokens.
-    - Set repository policies.
+    - Set lifecycle policies for &ECR; repositories.
+    - Push a Docker image to an &ECR; repository.
+    - Verify the existence of an image in an &ECR; repository.
+    - List &ECR; repositories for your account and get details about them.
+    - Delete &ECR; repositories.
   category: Scenarios
   languages:
     Java:
