rolled in more review comments

--- a/.doc_gen/metadata/ecr_metadata.yaml
+++ b/.doc_gen/metadata/ecr_metadata.yaml
@@ -130,7 +130,7 @@ ecr_DescribeRepositories:
           excerpts:
             - description:
               snippet_tags:
-                - ecr.java2_hello.main
+                - ecr.java2.describe.policy.main
     Rust:
       versions:
         - sdk_version: 1
