--- a/.github/workflows/yaml-lint.yml
+++ b/.github/workflows/yaml-lint.yml
@@ -20,7 +20,7 @@ jobs:
         id: changed-files
         uses: tj-actions/changed-files@v41
         with:
-          files: ".doc_gen/metadata/**/*.{yml,yaml}"
+          files: "**/*.{yml,yaml}"
       - name: Setup Python
         if: steps.changed-files.outputs.any_changed == 'true'
         uses: actions/setup-python@v3
@@ -30,7 +30,7 @@ jobs:
         if: steps.changed-files.outputs.any_changed == 'true'
         run: >-
           python3 -m pip install -r .tools/base_requirements.txt
-      - name: Lint metadata files
+      - name: Lint YAML files
         if: steps.changed-files.outputs.any_changed == 'true'
         run: >-
-          yamllint --format standard -c .tools/validation/.yamllint.yaml .doc_gen/metadata
+          yamllint --format standard -c .tools/validation/.yamllint.yaml .
