Moves the lint disable to the correct line in sh-check.yml

--- a/.github/workflows/sh-check.yml
+++ b/.github/workflows/sh-check.yml
@@ -2,8 +2,8 @@
 
 name: Lint Bash
 
-on:
-  pull_request:  # yamllint disable-line rule:truthy
+on:  # yamllint disable-line rule:truthy
+  pull_request:
   workflow_dispatch:
 
 jobs:
