--- a/.github/workflows/lint-check-dotnet.yml
+++ b/.github/workflows/lint-check-dotnet.yml
@@ -1,5 +1,6 @@
-name: Dotnet lint check
-on:
+name: Dotnet Lint and Check
+
+on:  # yamllint disable-line rule:truthy
   pull_request:
   workflow_dispatch:
 permissions:
