--- a/.github/workflows/lint-golang.yml
+++ b/.github/workflows/lint-golang.yml
@@ -1,5 +1,6 @@
-name: golangci-lint
-on:
+name: Lint GoLang
+
+on:  # yamllint disable-line rule:truthy
   pull_request:
   workflow_dispatch:
 permissions:
