--- a/.github/workflows/lint-php.yml
+++ b/.github/workflows/lint-php.yml
@@ -1,6 +1,6 @@
 name: "PHP Linter"
 
-on:
+on:  # yamllint disable-line rule:truthy
   pull_request:
     paths:
       - "**.php"
@@ -12,7 +12,8 @@ jobs:
     name: "PHP Linter"
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
         with:
           fetch-depth: 0
 
@@ -28,7 +29,8 @@ jobs:
           curl -OL https://squizlabs.github.io/PHP_CodeSniffer/phpcs.phar
           php phpcs.phar --version
 
-      - uses: thenabeel/action-phpcs@v8
+      - name: Run PHPCS
+        uses: thenabeel/action-phpcs@v8
         if: steps.changed-files.outputs.any_changed == 'true'
         with:
           files: "**.php"
