--- a/.github/workflows/validate-doc-metadata.yml
+++ b/.github/workflows/validate-doc-metadata.yml
@@ -1,13 +1,11 @@
 name: Validate Documentation Metadata
 
-on:
+on:  # yamllint disable-line rule:truthy
+  workflow_dispatch:
   push:
     branches: [main]
   pull_request:
     branches: [main]
-
-  # Allows running this workflow manually from the Actions tab
-  workflow_dispatch:
 
 jobs:
   validate-doc-metadata:
