--- a/.github/workflows/lint-python.yml
+++ b/.github/workflows/lint-python.yml
@@ -1,12 +1,12 @@
-name: Ruby Linting
+name: Lint Python
 
-on:
+on:  # yamllint disable-line rule:truthy
   pull_request:
   workflow_dispatch:
 
 jobs:
-  rubocop:
-    name: RuboCop
+  black:
+    name: Flake8 Linting & Black Formatting
     runs-on: ubuntu-latest
 
     steps:
@@ -17,19 +17,20 @@ jobs:
         id: changed-files
         uses: tj-actions/changed-files@v41
         with:
-          files: "ruby/**/*.rb"
+          files: "**.py"
 
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
+      - name: Set up Python
+        uses: actions/setup-python@v2
         with:
-          ruby-version: 3.0
+          python-version: 3.9
 
       - name: Install dependencies
         run: |
-          gem install rubocop
+          pip install black pylint
 
-      - name: Run RuboCop
+      - name: Run Black & Pylint
         if: steps.changed-files.outputs.any_changed == 'true'
         run: |
           changed_files=(${{steps.changed-files.outputs.all_changed_files}})
-          rubocop --config .github/linters/.ruby-lint.yml "${changed_files[@]}"     
+          black "${changed_files[@]}"
+          pylint --rcfile .github/linters/.python-lint "${changed_files[@]}"
