--- a/.github/workflows/stats_lambda.yml
+++ b/.github/workflows/stats_lambda.yml
@@ -5,7 +5,7 @@
 
 name: Invoke Lambda function for GitHub example/snippet metrics
 
-on:
+on: # yamllint disable-line rule:truthy
   pull_request:
     types:
       - closed
