--- a/.github/workflows/stats_lambda.yml
+++ b/.github/workflows/stats_lambda.yml
@@ -12,6 +12,7 @@ on: # yamllint disable-line rule:truthy
   workflow_dispatch:
 env:
   COMMIT: ${{github.event.pull_request.head.sha}}
+  PR_AUTHOR: ${{ github.event.pull_request.user.login }}
 jobs:
   if_merged: 
     name: Generate Repo Statistics
@@ -19,7 +20,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: echo "JSON_PAYLOAD={\"commit\" :\"${{ env.COMMIT }}\"}" >> $GITHUB_ENV
+      - run: echo "JSON_PAYLOAD={\"commit\" :\"${{ env.COMMIT }}\"}, {\"author\" :\"${{ env.PR_AUTHOR }}\"}" >> $GITHUB_ENV
       - name: Invoke runTheNumbers
         uses: gagoar/invoke-aws-lambda@master
         with:
