--- a/.github/workflows/stats_lambda.yml
+++ b/.github/workflows/stats_lambda.yml
@@ -20,8 +20,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Convert event Payload
-      - uses: actions/checkout@v2
-      - run: echo "JSON_PAYLOAD={\"commit\" :\"${{ env.COMMIT }}\"}, {\"author\" :\"${{ env.PR_AUTHOR }}\"}" >> $GITHUB_ENV
+        run: echo "JSON_PAYLOAD={\"commit\" :\"${{ env.COMMIT }}\"}, {\"author\" :\"${{ env.PR_AUTHOR }}\"}" >> $GITHUB_ENV
       - name: Invoke 'runTheNumbers' Lambda function
         uses: gagoar/invoke-aws-lambda@master
         with:
