--- a/.github/workflows/stats_lambda.yml
+++ b/.github/workflows/stats_lambda.yml
@@ -4,24 +4,24 @@
 # https://github.com/marketplace/actions/invoke-aws-lambda
 
 name: Invoke runTheNumbers lambda functions
-on:
+on: # yamllint disable-line rule:truthy
    pull_request:
-       types:
-       - closed
+      types:
+          - closed
    workflow_dispatch:
 env:
    COMMIT: ${{github.event.pull_request.head.sha}}
    AUTHOR: ${{ github.event.pull_request.user.login }}
 jobs:
-  if_merged:
-    if: github.event.pull_request.merged == true
-    runs-on: ubuntu-latest
-    steps:
-        - uses: actions/checkout@v2
-        - run: echo "JSON_PAYLOAD={\"commit\" :\"${{ env.COMMIT }}\"},{\"author\" :\"${{ env.AUTHOR }}\"} " >> $GITHUB_ENV
-        - name: Invoke runTheNumbers
-          uses: gagoar/invoke-aws-lambda@master
-          with:
+   if_merged:
+     if: github.event.pull_request.merged == true
+     runs-on: ubuntu-latest
+     steps:
+      - uses: actions/checkout@v2
+      - run: echo "JSON_PAYLOAD={\"commit\" :\"${{ env.COMMIT }}\"},{\"author\" :\"${{ env.AUTHOR }}\"} " >> $GITHUB_ENV
+      - name: Invoke runTheNumbers
+        uses: gagoar/invoke-aws-lambda@master
+        with:
              AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
              AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
              REGION: 'eu-west-1'
