--- a/.github/workflows/stats-lambda.yml
+++ b/.github/workflows/stats-lambda.yml
@@ -3,7 +3,7 @@
 # For more information, see:
 # https://github.com/marketplace/actions/invoke-aws-lambda
 
-name: Trigger Lambda to caputure metrics
+name: Trigger Lambda to capture metrics
 on:   # yamllint disable-line rule:truthy
   pull_request:
     types:
