--- a/.github/workflows/stats-lambda.yml
+++ b/.github/workflows/stats-lambda.yml
@@ -20,12 +20,14 @@ jobs:
     steps:
       - name: Create payload
         run: echo "JSON_PAYLOAD={\"commit\" :\"${{ env.COMMIT }}\",\"author\" :\"${{ env.PR_AUTHOR }}\"}" >> $GITHUB_ENV
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@master  # More information on this action can be found below in the 'AWS Credentials' section
+        with:
+          role-to-assume: arn:aws:iam::959731285276:role/run-the-numbers-lambda
+          aws-region: eu-west-1
       - name: Invoke Lambda
         uses: gagoar/invoke-aws-lambda@master
         with:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          REGION: 'eu-west-1'
           FunctionName: runTheNumbers
           Payload: ${{env.JSON_PAYLOAD}}
           InvocationType: RequestResponse
