--- a/.github/workflows/stats-lambda.yml
+++ b/.github/workflows/stats-lambda.yml
@@ -26,12 +26,8 @@ jobs:
     steps:
       - name: Create payload
         run: echo "JSON_PAYLOAD={\"commit\" :\"${{ env.COMMIT }}\",\"author\" :\"${{ env.PR_AUTHOR }}\"}" >> $GITHUB_ENV
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@master 
-        with:
-          role-to-assume: arn:aws:iam::959731285276:role/run-the-numbers-lambda
-          role-session-name: Run_the_numbers
-          aws-region: ${{env.AWS_REGION}}
+      - name: Checkout Repository
+        uses: actions/checkout@v2
       - name: Invoke Lambda
         uses: y5347M/invoke-aws-lambda-oidc@v1
         with:
