--- a/.doc_gen/metadata/dynamodb_metadata.yaml
+++ b/.doc_gen/metadata/dynamodb_metadata.yaml
@@ -44,6 +44,22 @@ dynamodb_Hello:
             - description: Code for the hello_dynamodb.cpp source file.
               snippet_tags:
                 - cpp.example_code.dynamodb.hello_dynamodb
+    Python:
+      versions:
+        - sdk_version: 3
+          github: python/example_code/dynamodb
+          excerpts:
+            - description:
+              snippet_tags:
+                - python.dynamodb.hello_dynamodb
+    Ruby:
+      versions:
+        - sdk_version: 3
+          github: ruby/example_code/dynamodb
+          excerpts:
+            - description:
+              snippet_tags:
+                - ruby.dynamodb.hello_dynamodb
   services:
     dynamodb: {ListTables}
 dynamodb_CreateTable:
