--- a/.doc_gen/metadata/ec2_metadata.yaml
+++ b/.doc_gen/metadata/ec2_metadata.yaml
@@ -60,6 +60,14 @@ ec2_Hello:
             - description: Code for the hello_ec2.cpp source file.
               snippet_tags:
                 - cpp.example_code.ec2.hello_ec2
+    Ruby:
+      versions:
+        - sdk_version: 3
+          github: ruby/example_code/ec2
+          excerpts:
+            - description:
+              snippet_tags:
+                - ec2.ruby.hello_ec2
   services:
     ec2: {DescribeSecurityGroups}
 ec2_CreateKeyPair:
