--- a/.doc_gen/metadata/iam_metadata.yaml
+++ b/.doc_gen/metadata/iam_metadata.yaml
@@ -61,6 +61,22 @@ iam_Hello:
             - description: Code for the iam.cpp source file.
               snippet_tags:
                 - cpp.example_code.iam.hello_iam
+    Python:
+      versions:
+        - sdk_version: 3
+          github: python/example_code/iam
+          excerpts:
+            - description:
+              snippet_tags:
+                - python.example.iam.hello_iam
+    Ruby:
+      versions:
+        - sdk_version: 3
+          github: ruby/example_code/iam
+          excerpts:
+            - description:
+              snippet_tags:
+                - ruby.example_code.iam.HelloIAM
   services:
     iam: {ListPolicies}
 iam_CreateAccountAlias:
