--- a/.doc_gen/metadata/rds_metadata.yaml
+++ b/.doc_gen/metadata/rds_metadata.yaml
@@ -42,6 +42,22 @@ rds_Hello:
             - description: Code for the hello_rds.cpp source file.
               snippet_tags:
                 - cpp.example_code.rds.hello_rds
+    Python:
+      versions:
+        - sdk_version: 3
+          github: python/example_code/rds
+          excerpts:
+            - description:
+              snippet_tags:
+                - python.example_code.rds.hello
+    Ruby:
+      versions:
+        - sdk_version: 3
+          github: ruby/example_code/rds
+          excerpts:
+            - description:
+              snippet_tags:
+                - ruby.hello-rds.list_instances
   services:
     rds: {DescribeDBInstances}
 rds_CreateDBInstance:
