--- a/.doc_gen/metadata/ssm_metadata.yaml
+++ b/.doc_gen/metadata/ssm_metadata.yaml
@@ -158,7 +158,7 @@ ssm_SendCommand:
                 - python.example_code.ssm.SendCommand
   services:
     ssm: {SendCommand}
-ssm_ListCommands:
+ssm_ListCommandInvocations:
   languages:
     Python:
       versions:
@@ -169,9 +169,9 @@ ssm_ListCommands:
             - description:
               snippet_tags:
                 - python.example_code.ssm.DocumentWrapper.decl
-                - python.example_code.ssm.ListCommands
+                - python.example_code.ssm.ListCommandInvocations
   services:
-    ssm: {ListCommands}
+    ssm: {ListCommandInvocations}
 ssm_CreateDocument:
   languages:
     Java:
