--- a/.doc_gen/metadata/services.yaml
+++ b/.doc_gen/metadata/services.yaml
@@ -1988,7 +1988,7 @@ marketplace-catalog:
   guide:
     subtitle: Seller Guide
     url: marketplace/latest/userguide/what-is-marketplace.html
-  long: '&MkTCAPIlong;'
+  long: '&MKTCAPIlong;'
   short: '&MKTCAPI;'
   sort: Marketplace Catalog API
   tags:
