updated hello ecr

--- a/.doc_gen/metadata/ecr_metadata.yaml
+++ b/.doc_gen/metadata/ecr_metadata.yaml
@@ -7,6 +7,15 @@ ecr_Hello:
   languages:
     Java:
       versions:
+        - sdk_version: 1
+          github: kotlin/services/ecr
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - ecr.kotlin_hello.main
+    Java:
+      versions:
         - sdk_version: 2
           github: javav2/example_code/ecr
           sdkguide:
